--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-22) unstable; urgency=medium
+
+  * Bug #48651: added some tests
+
+ -- Felix Botner <botner@univention.de>  Thu, 21 Feb 2019 13:43:47 +0100
+
 ucs-test-ucsschool (6.0.0-21) unstable; urgency=medium
 
   * Bug #48651: added some tests
