--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-28) unstable; urgency=low
+
+  * Bug #47957: remove ucs-school-backup
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 21 Feb 2019 16:05:10 +0100
+
 ucs-school-metapackage (12.0.0-27) unstable; urgency=low
 
   * Bug #48519: set ucsschoolRole property when joining
