--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-29) unstable; urgency=low
+
+  * Bug #47969: fix hook type check
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 21 Feb 2019 17:17:14 +0100
+
 ucs-school-metapackage (12.0.0-28) unstable; urgency=low
 
   * Bug #47957: remove ucs-school-backup
