--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-30) unstable; urgency=low
+
+  * Bug #47969: increase log level of join hook
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 21 Feb 2019 22:42:40 +0100
+
 ucs-school-metapackage (12.0.0-29) unstable; urgency=low
 
   * Bug #47969: fix hook type check
