--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,6 +1,7 @@
 ucs-school-metapackage (12.0.0-30) unstable; urgency=low
 
   * Bug #47969: increase log level of join hook
+  * Bug #47969: joinscript should fail if hook registration fails
 
  -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 21 Feb 2019 22:42:40 +0100
 
