--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.1.0-11) unstable; urgency=medium
+
+  * Bug #48741: Do not update all python modules in postinst
+
+ -- Jürn Brodersen <brodersen@univention.de>  Fri, 22 Feb 2019 14:20:22 +0100
+
 ucs-school-lib (12.1.0-10) unstable; urgency=low
 
   * Bug #48651: fix AttributeError: 'module' object has no attribute 'utils'
