--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-23) unstable; urgency=medium
+
+  * Bug #48651: added some tests
+
+ -- Felix Botner <botner@univention.de>  Fri, 22 Feb 2019 14:32:32 +0100
+
 ucs-test-ucsschool (6.0.0-22) unstable; urgency=medium
 
   * Bug #48651: added some tests
