--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-33) unstable; urgency=low
+
+  * Bug #48731: remove debug output to 00ucs-school-app-version-check.inst
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 22 Feb 2019 17:39:27 +0100
+
 ucs-school-metapackage (12.0.0-32) unstable; urgency=low
 
   * Bug #48731: add debug output to 00ucs-school-app-version-check.inst
