--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (11.0.0-3) unstable; urgency=low
+
+  * Bug #48743: allow creation of administrative slaves via schools wizard
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Sun, 24 Feb 2019 00:43:58 +0100
+
 ucs-school-umc-wizards (11.0.0-2) unstable; urgency=medium
 
   * Bug #48099: Optimize object iteration in create_computer method
