--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.1.0-12) unstable; urgency=medium
+
+  * Bug #48722: Fix Domain Users OU creation
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 25 Feb 2019 12:12:44 +0100
+
 ucs-school-lib (12.1.0-11) unstable; urgency=medium
 
   * Bug #48741: Do not update all python modules in postinst
