--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-36) unstable; urgency=low
+
+  * Bug #48699: Add new logo
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 25 Feb 2019 11:48:11 +0100
+
 ucs-school-metapackage (12.0.0-35) unstable; urgency=low
 
   * Bug #47957: remove unused call_joinscript calls
