--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-metapackage (12.0.0-37) unstable; urgency=low
+
+  * Bug #48731: removed last changes; the issues are now addressed
+    directly in univention-join
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 25 Feb 2019 13:47:29 +0100
+
 ucs-school-metapackage (12.0.0-36) unstable; urgency=low
 
   * Bug #48699: Add new logo
