--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-38) unstable; urgency=medium
+
+  * Bug #48534: fix IFS unset
+
+ -- Arvid Requate <requate@univention.de>  Mon, 25 Feb 2019 19:53:59 +0100
+
 ucs-school-metapackage (12.0.0-37) unstable; urgency=low
 
   * Bug #48731: removed last changes; the issues are now addressed
