--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-39) unstable; urgency=low
+
+  * Bug #47957: added missing files to certain meta packages
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 25 Feb 2019 21:27:55 +0100
+
 ucs-school-metapackage (12.0.0-38) unstable; urgency=medium
 
   * Bug #48534: fix IFS unset
