--- a/ucs-school-umc-wizards/umc/js/de.po
+++ b/ucs-school-umc-wizards/umc/js/de.po
@@ -280,7 +280,7 @@ msgid ""
 "Name of the administrative domaincontroller slave for the new school. The "
 "server name may consist of the letters a-z, the digits 0-9 and hyphens (-). "
 "The name of the administrative server may not be equal to the educational "
-"server! A administrative school server does not have to be specified."
+"server! An administrative school server does not have to be specified."
 msgstr ""
 "Name des Verwaltungsservers der neuen Schule. Der Servername darf aus den "
 "Buchstaben a-z, den Ziffern 0-9 und dem Bindestrich (-) bestehen. Der Name "
