--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-radius-802.1x (7.0.1-5) unstable; urgency=medium
+
+  * Bug #46018: Fix typo
+
+ -- Jürn Brodersen <brodersen@univention.de>  Tue, 26 Feb 2019 17:26:00 +0100
+
 ucs-school-radius-802.1x (7.0.1-4) unstable; urgency=medium
 
   * Bug #46018: Add version to dependency on univention-radius
