--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-45) unstable; urgency=low
+
+  * Bug #48519: add missing include
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 27 Feb 2019 10:31:01 +0100
+
 ucs-school-metapackage (12.0.0-44) unstable; urgency=low
 
   * Bug #48519: revert: don't die in update situation
