--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-25) unstable; urgency=low
+
+  * Bug #48651: fix HTTP-API import test
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 27 Feb 2019 12:34:43 +0100
+
 ucs-test-ucsschool (6.0.0-24) unstable; urgency=medium
 
   * Bug #48722: fix 110_set_default-umc-users
