--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-46) unstable; urgency=medium
+
+  * Bug #48534: Convert postinst scripts to bash
+
+ -- Arvid Requate <requate@univention.de>  Wed, 27 Feb 2019 13:59:42 +0100
+
 ucs-school-metapackage (12.0.0-45) unstable; urgency=low
 
   * Bug #48519: add missing include
