--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,4 +1,10 @@
-ucs-school-metapackage (12.0.0-46) unstable; urgency=medium
+ucs-school-metapackage (12.0.0-47) unstable; urgency=low
+
+  * Bug #48734: fix broken pipe
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 27 Feb 2019 15:04:43 +0100
+
+ ucs-school-metapackage (12.0.0-46) unstable; urgency=medium
 
   * Bug #48534: Convert postinst scripts to bash
 
