--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,11 @@
+ucs-school-metapackage (12.0.0-48) unstable; urgency=medium
+
+  * Bug #48815: Partial revert of commit 8733b84d1: Don't activate
+    UCRV samba4/ldb/sam/module/prepend="univention_samaccountname_ldap_check"
+    in ucs-school-master and ucs-school-central-slave.
+
+ -- Arvid Requate <requate@univention.de>  Thu, 28 Feb 2019 16:17:03 +0100
+
 ucs-school-metapackage (12.0.0-47) unstable; urgency=low
 
   * Bug #48734: fix broken pipe
