--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-26) unstable; urgency=low
+
+  * Bug #48651: test activating deactivated users
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 01 Mar 2019 08:50:42 +0100
+
 ucs-test-ucsschool (6.0.0-25) unstable; urgency=low
 
   * Bug #48651: fix HTTP-API import test
