--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.5-2) unstable; urgency=low
+
+  * Bug #48732: remove handling of role for secondary school slave
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 04 Mar 2019 12:41:15 +0100
+
 ucs-school-import (17.0.5-1) unstable; urgency=low
 
   * Bug #48836: remove ucs-school-join-secondary-samba4
