--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-49) unstable; urgency=low
+
+  * Bug #48540: fix some typos in demo portal
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 06 Mar 2019 11:16:54 +0100
+
 ucs-school-metapackage (12.0.0-48) unstable; urgency=medium
 
   * Bug #48815: Partial revert of commit 8733b84d1: Don't activate
