--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.5-3) unstable; urgency=low
+
+  * Bug #42131: add script to purge username and email counter
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 12 Mar 2019 14:56:06 +0100
+
 ucs-school-import (17.0.5-2) unstable; urgency=low
 
   * Bug #48732: remove handling of role for secondary school slave
