Bug #42131: rename counter putrge script

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.5-4) unstable; urgency=low
+
+  * Bug #42131: rename counter putrge script
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 13 Mar 2019 10:42:23 +0100
+
 ucs-school-import (17.0.5-3) unstable; urgency=low
 
   * Bug #42131: add script to purge username and email counter
