Bug #48189: adapt tests to check_for_non_empty_pyhooks

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-30) unstable; urgency=low
+
+  * Bug #48189: adapt tests to check_for_non_empty_pyhooks
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 13 Mar 2019 13:47:58 +0100
+
 ucs-test-ucsschool (6.0.0-29) unstable; urgency=low
 
   * Bug #48189: add test for pre-read hook
