--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (8.0.2-4) unstable; urgency=low
+
+  * Bug #49268: use new ImportPyHookLoader convenience functions
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 13 Mar 2019 16:36:05 +0100
+
 ucs-school-umc-exam (8.0.2-3) unstable; urgency=low
 
   * Bug #48509: Trim exam name for filename
