--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.5-5) unstable; urgency=low
+
+  * Bug #48958: add convenience wrapper for easy usage of PyHooksLoader
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 13 Mar 2019 16:34:44 +0100
+
 ucs-school-import (17.0.5-4) unstable; urgency=low
 
   * Bug #42131: rename counter putrge script
