--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-31) unstable; urgency=low
+
+  * Bug #48655: fix configuration
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 18 Mar 2019 10:59:12 +0100
+
 ucs-test-ucsschool (6.0.0-30) unstable; urgency=low
 
   * Bug #48189: adapt tests to check_for_non_empty_pyhooks
