--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,11 @@
+ucs-school-import (17.0.5-7) unstable; urgency=low
+
+  * Bug #49037: use lib provided loggers and handlers
+  * use explicit relative imports for modules of own package or direct
+    parent/child package
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 21 Mar 2019 21:09:51 +0100
+
 ucs-school-import (17.0.5-6) unstable; urgency=low
 
   * Bug #48959: add pre-read hook that can modify CSV headers
