--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,14 @@
+ucs-school-lib (12.1.0-15) unstable; urgency=low
+
+  * Bug #49037: don't instantiate handlers in lib code
+  * move static formatting configuration to separate file
+  * colorize console output
+  * use explicit relative imports for modules of own package or direct
+    parent/child package
+  * prove logger instances for all ucsschool classes
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 21 Mar 2019 21:05:33 +0100
+
 ucs-school-lib (12.1.0-14) unstable; urgency=low
 
   * Bug #48958: improve type hints
