--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (6.0.0-32) unstable; urgency=low
+
+  * Bug #49037: use lib provided handlers
+  * remove now superfluous custom ColorFormatter
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 21 Mar 2019 21:16:21 +0100
+
 ucs-test-ucsschool (6.0.0-31) unstable; urgency=low
 
   * Bug #48655: fix configuration
