--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.1.0-16) unstable; urgency=low
+
+  * Bug #49037: don't colorize output that's redirected away from a terminal
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 25 Mar 2019 09:34:29 +0100
+
 ucs-school-lib (12.1.0-15) unstable; urgency=low
 
   * Bug #49037: don't instantiate handlers in lib code
