--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-33) unstable; urgency=low
+
+  * Bug #49037: adjust test to pyhook test and logging
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 25 Mar 2019 09:38:02 +0100
+
 ucs-test-ucsschool (6.0.0-32) unstable; urgency=low
 
   * Bug #49037: use lib provided handlers
