--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-lib (12.1.0-17) unstable; urgency=low
+
+  * Bug #49037: allow to force colorized output
+  * load colors from configuration file
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 26 Mar 2019 15:41:25 +0100
+
 ucs-school-lib (12.1.0-16) unstable; urgency=low
 
   * Bug #49037: don't colorize output that's redirected away from a terminal
