--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.5-9) unstable; urgency=low
+
+  * Bug #49037: prevent adding 2nd stream handler
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 26 Mar 2019 15:44:39 +0100
+
 ucs-school-import (17.0.5-8) unstable; urgency=low
 
   * Bug #49037: adjust handlers loglevel after reading configuration
