--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.1.0-18) unstable; urgency=low
+
+  * Bug #49037: simplify TTY testing
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 27 Mar 2019 07:38:12 +0100
+
 ucs-school-lib (12.1.0-17) unstable; urgency=low
 
   * Bug #49037: allow to force colorized output
