Bug #48651: improve readability of test

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-37) unstable; urgency=low
+
+  * Bug #48651: improve readability of test
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 28 Mar 2019 16:01:22 +0100
+
 ucs-test-ucsschool (6.0.0-36) unstable; urgency=low
 
   * Bug #48651: schoollists are shown on DC master
