--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.4-13) unstable; urgency=low
+
+  * Bug #48924: add/update LDAP ACL test script for edu/adm slave
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 06 May 2019 13:58:58 +0200
+
 ucs-test-ucsschool (5.0.4-12) unstable; urgency=low
 
   * Bug #49259: fix error from backporting test
