--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.1.1-1) unstable; urgency=low
+
+  * Bug #48469: Add alter-dhcpd-base option to lib
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 01 Apr 2019 13:13:13 +0100
+
 ucs-school-lib (12.1.0-18) unstable; urgency=low
 
   * Bug #49037: simplify TTY testing
