--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.1-1) unstable; urgency=medium
+
+  * Bug #48469: Do not modify dhcpd/ldap/base in DEMOSCHOOL creation
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 01 Apr 2019 13:13:13 +0100
+
 ucs-school-metapackage (12.0.0-50) unstable; urgency=medium
 
   * Bug #48883: create ldap indices for school attributes on central slave
