--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.6-3) unstable; urgency=low
+
+  * Bug #49260: allow configuration of allowed special characters in username
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 08 Apr 2019 22:36:27 +0200
+
 ucs-school-import (17.0.6-2) unstable; urgency=low
 
   * Bug #48469: Fix typo
