--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.1.1-3) unstable; urgency=medium
+
+  * Bug #49312: Fix broken internetrules
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 17 Apr 2019 16:21:08 +0200
+
 ucs-school-lib (12.1.1-2) unstable; urgency=low
 
   * Bug #48469: Add handling for alter-dhcpd-base option equals None
