--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-45) unstable; urgency=low
+
+  * Bug #49323: wait for DRS so kerberos auth works
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 23 Apr 2019 09:58:40 +0200
+
 ucs-test-ucsschool (6.0.0-44) unstable; urgency=medium
 
   * Bug #49315, #49316, #49322, #49323: fix tests
