--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.0.0-6) unstable; urgency=low
+
+  * Bug #49227: Deactivate cron job by default
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Tue, 23 Apr 2019 10:48:11 +0200
+
 ucs-school-umc-exam (9.0.0-5) unstable; urgency=low
 
   * Bug #49227: add script and cron job that regularely collects exam results
