--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.1.1-4) unstable; urgency=medium
+
+  * Bug #49329: Do not double open a UDM object during get_all()
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 30 Apr 2019 18:09:00 +0200
+
 ucs-school-lib (12.1.1-3) unstable; urgency=medium
 
   * Bug #49312: Fix broken internetrules
