--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-48) unstable; urgency=low
+
+  * Bug #48141: test run-part hook execution
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 02 May 2019 17:34:38 +0200
+
 ucs-test-ucsschool (6.0.0-47) unstable; urgency=low
 
   * Bug #47222: test long usernames
