--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.6-10) unstable; urgency=low
+
+  * Bug #47222: revert code premitting usernames longer than 20 characters
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 03 May 2019 10:42:59 +0200
+
 ucs-school-import (17.0.6-9) unstable; urgency=low
 
   * Bug #48141: repeated execution of create_ou is not an error
