--- a/ucs-school-ldap-acls-master/debian/changelog
+++ b/ucs-school-ldap-acls-master/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-ldap-acls-master (17.0.1-1) unstable; urgency=low
+
+  * Bug #48924: give permission for administrative slaves/memberservers to
+    read/replicate multi-OU staff users
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 06 May 2019 13:57:00 +0200
+
 ucs-school-ldap-acls-master (17.0.0-2) unstable; urgency=medium
 
   * Bug #49434: remove ACLs for creating/modifying shares as teacher
